Setting up the repositories view

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">GithubProjects</string>
+
+    <string-array name="repositories_array">
+        <item>All</item>
+        <item>Public</item>
+        <item>Private</item>
+    </string-array>
 </resources>
